--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <img
-    src="/assets/img/gestor-de-projeto.png"
+    [src]="imagem"
     alt="Logo Gestor"
     class="img__logo"
   />
