--- a/src/app/pages/pesquisa/pesquisa.component.html
+++ b/src/app/pages/pesquisa/pesquisa.component.html
@@ -1,6 +1,6 @@
 <body>
   <main>
-    <div action="" class="form__pesquisa">
+    <div class="form__pesquisa">
       <input
         type="text"
         [(ngModel)]="term"
